--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
     };
     select.addEventListener('change', syncLabel);
   }
-  bindPicker('hotelBtn','hotelLabel','hotel','Select Location');
-  bindPicker('peerHotelBtn','peerHotelLabel','peerHotel','Select Location');
+  bindPicker('hotelBtn','hotelLabel','hotel','select location');
+  bindPicker('peerHotelBtn','peerHotelLabel','peerHotel','select location');
 
   // Answer pills
   function handlePill(elm){
