--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 </section>
 <!-- ===== Questions 1 ===== -->
 <section id="q1" style="display:none">
-
+<h2 class="section-title">STATEMENTS PART 1</h2>
 <div id="list-q1"></div>
 <div class="actions">
 <button class="btn-secondary" id="backToInstructions">Back</button>
@@ -323,7 +323,7 @@
 </section>
 <!-- ===== Questions 2 ===== -->
 <section id="q2" style="display:none">
-
+<h2 class="section-title">STATEMENTS PART 2</h2>
 <div id="list-q2"></div>
 <div class="actions">
 <button class="btn-secondary" id="backToQ1">Back</button>
